--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1f32e8cc",
+   "execution_count": 5,
+   "id": "fbcecd51",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
@@ -14,44 +15,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ae3fe28a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<zip at 0x1532871d300>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create a set of random latitude and longitude combinations.\n",
-    "lats = np.random.uniform(low=-90.000, high=90.000, size=1500)\n",
-    "lngs = np.random.uniform(low=-180.000, high=180.000, size=1500)\n",
-    "lat_lngs = zip(lats, lngs)\n",
-    "lat_lngs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "a3fadf76",
+   "execution_count": 6,
+   "id": "25ce13fa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add the latitudes and longitudes to a list.\n",
-    "coordinates = list(lat_lngs)"
+    "# Create a practice set of random latitude and longitude combinations.\n",
+    "x = [25.12903645, 25.92017388, 26.62509167, -59.98969384, 37.30571269]\n",
+    "y = [-67.59741259, 11.09532135, 74.84233102, -76.89176677, -61.13376282]\n",
+    "coordinates = zip(x, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "2e792fa9",
+   "execution_count": 7,
+   "id": "1e2dbb54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.12903645 -67.59741259\n",
+      "25.92017388 11.09532135\n",
+      "26.62509167 74.84233102\n",
+      "-59.98969384 -76.89176677\n",
+      "37.30571269 -61.13376282\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use the tuple() function to display the latitude and longitude combinations.\n",
+    "for coordinate in coordinates:\n",
+    "    print(coordinate[0], coordinate[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "831a1ead",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,17 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d49d1b65",
+   "execution_count": 10,
+   "id": "0508e3e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "612"
+       "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,6 +90,19 @@
     "        cities.append(city)\n",
     "# Print the city count to confirm sufficient count.\n",
     "len(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2b02428e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the tuple() function to display the latitude and longitude combinations.\n",
+    "for coordinate in coordinates:\n",
+    "    print(citipy.nearest_city(coordinate[0], coordinate[1]).city_name,\n",
+    "          citipy.nearest_city(coordinate[0], coordinate[1]).country_code)"
    ]
   }
  ],
