--- a/Random_numbers.ipynb
+++ b/Random_numbers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "0e40f5f2",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "d6ac3779",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "48"
+       "55"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "94c3caa4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6819215673171987"
+       "0.5910054084462525"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,26 +54,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
+   "id": "e97a9189",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.730101418087706"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_number = random.randint(-90,89) + random.random()\n",
+    "random_number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "77ef9047",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[55.267759756376925,\n",
-       " 79.28354332105025,\n",
-       " -14.25017049935132,\n",
-       " -37.8418127554094,\n",
-       " 42.22819097408657,\n",
-       " 78.80224048057177,\n",
-       " 24.38750915170616,\n",
-       " -49.631257976711,\n",
-       " 69.77749536734329,\n",
-       " -26.276383300552354]"
+       "[67.6392092129288,\n",
+       " 26.010843710590507,\n",
+       " 65.03565291290356,\n",
+       " 29.600346737000145,\n",
+       " 66.3933279101834,\n",
+       " 76.79072445249217,\n",
+       " -28.970157073348464,\n",
+       " -8.393154722583773,\n",
+       " -29.952045975110636,\n",
+       " 52.65591989782259]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,17 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "b9736e57",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-7"
+       "-78"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "b281fa08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "51"
+       "-57"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,17 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "e499ee1d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28.972748921517436"
+       "24.78927305255681"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "ed542ce1",
    "metadata": {},
    "outputs": [],
@@ -164,17 +186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "b83bd15c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-66.24195336622155"
+       "-12.310636873609184"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,17 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "be35bfe0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19.31325121716148"
+       "-58.02378066564457"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,29 +228,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "39e24ac3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  8.94006191, -62.63177902,  62.11186796,  16.29388817,\n",
-       "       -64.24288026, -29.60983253, -82.40552545,  44.16323901,\n",
-       "        -3.74741891, -22.12107255, -46.92757665, -24.10216274,\n",
-       "       -10.57465674, -47.97849801,  31.82000246,  25.78141594,\n",
-       "        89.29624073,  -6.73272703,  81.73552453, -53.95316297,\n",
-       "        39.7020862 ,   0.68514483,  46.12621752, -54.79191633,\n",
-       "        50.92318262,  24.46538023,  48.26519888, -43.91551902,\n",
-       "       -63.66658392, -77.70898385, -35.79073737, -14.79208067,\n",
-       "       -79.09583527,  51.72206318, -64.13155771, -68.09714127,\n",
-       "        70.64709277, -22.48230542,  15.02529561,  62.64727607,\n",
-       "        -3.96821585, -49.74147208, -27.54611364, -21.82493408,\n",
-       "        62.84894634,  20.4468068 ,  69.45799406, -82.47127773,\n",
-       "        39.56881678,  38.57661289])"
+       "array([ 77.41171761, -12.41915118,  -0.13348909,  32.55385499,\n",
+       "        77.62659524,  69.68216847, -83.92733978,  58.89488169,\n",
+       "       -20.31762155,  22.60913297,  62.33355548,  50.64011618,\n",
+       "        81.66890492,  50.64641302, -65.46498316, -72.95535118,\n",
+       "       -44.2209507 , -53.10431871, -26.75329073, -10.30437249,\n",
+       "        -1.38879541,   1.66475342, -26.36210416, -79.76573049,\n",
+       "       -36.46807593,  50.04427611,  89.04340423, -51.65143258,\n",
+       "        67.92401297,  39.74908609, -81.73953014, -27.91604709,\n",
+       "        43.33226612,  26.67644365, -23.00040002,  68.77282128,\n",
+       "        13.01433594, -59.59953615, -50.50624579,   2.40104309,\n",
+       "        -7.775937  ,  53.97370438, -68.22713352, -25.21403377,\n",
+       "       -77.80662871, -78.85131723,  -6.8654705 , -82.4290252 ,\n",
+       "       -86.36501034, -41.32151804])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "fb58521f",
    "metadata": {},
    "outputs": [],
@@ -249,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "ebc4c148",
    "metadata": {},
    "outputs": [
@@ -257,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14 µs ± 413 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "13.4 µs ± 165 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -267,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "6a16738a",
    "metadata": {},
    "outputs": [
@@ -275,7 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.37 ms ± 7.01 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "1.37 ms ± 10.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -294,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "4a471795",
    "metadata": {},
    "outputs": [],
