updated as of 6.1.5

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -21,7 +21,7 @@
     {
      "data": {
       "text/plain": [
-       "<zip at 0x1532871d300>"
+       "<zip at 0x1bf079f1980>"
       ]
      },
      "execution_count": 3,
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a3fadf76",
    "metadata": {},
    "outputs": [],
