--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "fbcecd51",
    "metadata": {},
    "outputs": [],
@@ -15,8 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "25ce13fa",
+   "execution_count": 9,
+   "id": "831a1ead",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the citipy module to determine city based on latitude and longitude.\n",
+    "from citipy import citipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0508e3e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +39,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "1e2dbb54",
+   "execution_count": 11,
+   "id": "36a6748a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Lat_lng = list(coordinates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d1640b98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a list for holding the cities.\n",
+    "cities = []\n",
+    "# Identify the nearest city for each latitude and longitude combination.\n",
+    "for coordinate in Lat_lng:\n",
+    "    city = citipy.nearest_city(coordinate[0], coordinate[1]).city_name\n",
+    "\n",
+    "    # If the city is unique, then we will add it to the cities list.\n",
+    "    if city not in cities:\n",
+    "        cities.append(city)\n",
+    "# Print the city count to confirm sufficient count.\n",
+    "len(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "28b0e33c",
    "metadata": {},
    "outputs": [
     {
@@ -46,64 +98,42 @@
    ],
    "source": [
     "# Use the tuple() function to display the latitude and longitude combinations.\n",
-    "for coordinate in coordinates:\n",
+    "for coordinate in Lat_lng:\n",
     "    print(coordinate[0], coordinate[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "831a1ead",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use the citipy module to determine city based on latitude and longitude.\n",
-    "from citipy import citipy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "0508e3e2",
+   "execution_count": 15,
+   "id": "2b02428e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cockburn town tc\n",
+      "gat ly\n",
+      "parvatsar in\n",
+      "punta arenas cl\n",
+      "saint george bm\n"
+     ]
     }
    ],
    "source": [
-    "# Create a list for holding the cities.\n",
-    "cities = []\n",
-    "# Identify the nearest city for each latitude and longitude combination.\n",
-    "for coordinate in coordinates:\n",
-    "    city = citipy.nearest_city(coordinate[0], coordinate[1]).city_name\n",
-    "\n",
-    "    # If the city is unique, then we will add it to the cities list.\n",
-    "    if city not in cities:\n",
-    "        cities.append(city)\n",
-    "# Print the city count to confirm sufficient count.\n",
-    "len(cities)"
+    "# Use the tuple() function to display the latitude and longitude combinations.\n",
+    "for coordinate in Lat_lng:\n",
+    "    print(citipy.nearest_city(coordinate[0], coordinate[1]).city_name,\n",
+    "          citipy.nearest_city(coordinate[0], coordinate[1]).country_code)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "2b02428e",
+   "execution_count": null,
+   "id": "3976206b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Use the tuple() function to display the latitude and longitude combinations.\n",
-    "for coordinate in coordinates:\n",
-    "    print(citipy.nearest_city(coordinate[0], coordinate[1]).city_name,\n",
-    "          citipy.nearest_city(coordinate[0], coordinate[1]).country_code)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
